--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="None" />
       <link rel="shortcut icon" href="img/favicon.ico" />
-    <title>Project - CT</title>
+    <title>DIY Pest Warehouse - CT</title>
     <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="css/theme_extra.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" />
@@ -31,7 +31,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-          <a href="." class="icon icon-home"> Project - CT
+          <a href="." class="icon icon-home"> DIY Pest Warehouse - CT
         </a><div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
       <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" title="Type search term here" />
@@ -85,7 +85,7 @@
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap">
       <nav class="wy-nav-top" role="navigation" aria-label="Mobile navigation menu">
           <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-          <a href=".">Project - CT</a>
+          <a href=".">DIY Pest Warehouse - CT</a>
         
       </nav>
       <div class="wy-nav-content">
@@ -101,11 +101,11 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <h1 id="welcome-to-project-theme-by-coalition-technologies-documentation">Welcome to PROJECT theme by Coalition Technologies documentation</h1>
+                <h1 id="welcome-to-diy-pest-warehouse-theme-by-coalition-technologies-documentation">Welcome to DIY Pest Warehouse theme by Coalition Technologies documentation</h1>
 <h2 id="developers-info">Developers info</h2>
 <ul>
-<li>Base theme: Cornerstone 6.14.0</li>
-<li>Node: 18.15.0</li>
+<li>Base theme: Annie's Garden 1.2.1</li>
+<li>Node: 20.16.0</li>
 <li>Command: stencil start</li>
 </ul>
 <h2 id="project-pages-designed">Project pages designed</h2>
@@ -178,5 +178,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-08-13 20:09:45.766165+00:00
+Build Date UTC : 2025-12-10 18:47:14.336239+00:00
 -->
